Add mqtt export and retry policies when errors occured

--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,13 @@
-SERPORT = 'COM3' # Most likely '/dev/ttyUSB0' on Linux
+SERPORT = '/dev/ttyUSB0'
 SERTIMEOUT = 0.5
 SERBAUD = 19200
 
-INTERVAL = 1 # Interval between reading statistics. In seconds.
+INTERVAL = 1
 
-INFLUX_HOST = 'http://127.0.0.1:8086'
-INFLUX_ORGID = 'org_id'
-INFLUX_BUCKET = 'bucket'
-INFLUX_TOKEN = 'token'
+MQTT_BROKER = 'host'
+MQTT_PORT = 1883
+MQTT_TOPIC = 'topic'
+MQTT_DEVICE_NAME = 'device'
+MQTT_CLIENT_ID = 'Must_Guid'
+
+MAX_RETRIES = 5
